--- a/bca.conf
+++ b/bca.conf
@@ -23,8 +23,8 @@ bc.client.viewer-delay=50
 
 # Headless settings - for "ant file"
 bc.game.maps=almsman,backdoor,corners,donut,friendly,moo,oasis,unself,steamedbuns,temple,terra,traffic,ventilation,onramp,bakedpotato,flytrap
-bc.game.team-b=team169
-bc.game.team-a=team169_baseline
+bc.game.team-a=team169
+bc.game.team-b=team169_baseline
 bc.server.save-file=match.rms
 
 # Transcriber settings
